# schemadex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml  road_map.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: CI.yml  docs.yml  release.yml  rust.yml
benches/agent-success/: README.md  baseline.py  compare.py  run_ablation.py  run_bird_mini.py  run_ollama.py  run_sentinel.py  run_synthetic.py  run_token_budget.py  sentinel_corpus.json  sentinel_corpus.py  sentinel_seed.sql  synthetic_corpus.json  synthetic_corpus.py  synthetic_schema.sql  treatment.py
crates/schemadex-core/: Cargo.toml
crates/schemadex-core/benches/: cache_refresh.rs
crates/schemadex-core/src/: agent.rs  cache.rs  error.rs  examples.rs  federation.rs  fingerprint.rs  hint.rs  introspector.rs  lib.rs  memo.rs  model.rs  otel.rs  overlap.rs  pii.rs  resolve.rs  safety.rs  sampling.rs  synonyms.rs  validate.rs
crates/schemadex-core/src/backends/: bigquery.rs  duckdb.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  snowflake.rs  sqlite.rs
crates/schemadex-core/tests/: integration_api_audit.rs  integration_bigquery.rs  integration_diff.rs  integration_docs.rs  integration_duckdb.rs  integration_mssql.rs  integration_mysql.rs  integration_query.rs  integration_scaffolds.rs  integration_snowflake.rs  integration_sqlite.rs  integration_warm.rs
crates/schemadex-py/: Cargo.toml
crates/schemadex-py/src/: lib.rs
docs/: architecture.md  benchmark.md  deprecation.md  index.md  migration-0.x-to-1.0.md  observability.md  release.md  semver.md  slim-wheels.md  usage.md
examples/: anthropic_messages.py  dspy_module.py  langchain_tools.py  langgraph_node.py  litellm_adapter.py  llamaindex_retriever.py  postgres_logical_replication.py  quickstart.py  schema_constrained_decoding.py
python/schemadex/: __init__.py  _native.pyi  dbt_source.py  embedding_resolve.py  failure_log.py  jupyter.py  lsp_server.py  mcp_server.py  web.py
tests/: test_adapters_anthropic.py  test_adapters_dspy.py  test_adapters_litellm.py  test_adapters_llamaindex.py  test_async.py  test_cache_extras.py  test_dbt_source.py  test_embedding_resolve.py  test_failure_log.py  test_jupyter.py  test_lsp_server.py  test_mcp_metrics.py  test_mcp_server.py  test_run_sql.py  test_run_sql_streaming.py  test_sampling_duckdb.py  test_sampling_mysql.py  test_smoke.py  test_web_server.py
