[package]
name = "schemadex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Schema introspection and resolution toolkit for SQL agents — core crate"
readme = "../../README.md"
keywords = ["sql", "schema", "introspection", "agents", "llm"]
categories = ["database", "development-tools"]

[features]
default = []
# `dep:openssl-sys` pulls in a vendored OpenSSL build so the manylinux_2_28
# wheel doesn't need a system OpenSSL installed in the build container.
postgres = ["sqlx/postgres", "sqlx/runtime-tokio-native-tls", "dep:openssl-sys"]
sqlite = ["sqlx/sqlite", "sqlx/runtime-tokio-native-tls", "dep:openssl-sys"]
mysql = ["sqlx/mysql", "sqlx/runtime-tokio-native-tls", "dep:openssl-sys"]
duckdb_backend = ["dep:duckdb"]
bigquery = ["dep:gcp-bigquery-client"]
snowflake = ["dep:reqwest", "dep:jsonwebtoken", "dep:base64", "dep:rsa"]
mssql = ["dep:tiberius", "dep:tokio-util", "tokio/net"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
url.workspace = true
tracing.workspace = true
sqlx = { workspace = true, optional = true }
duckdb = { workspace = true, optional = true }
strsim.workspace = true
tiktoken-rs.workspace = true
regex.workspace = true
zstd.workspace = true
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
openssl-sys = { version = "0.9", features = ["vendored"], optional = true }
gcp-bigquery-client = { version = "0.28", default-features = false, features = ["rust-tls", "ring"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
jsonwebtoken = { version = "9", optional = true }
base64 = { version = "0.22", optional = true }
rsa = { version = "0.9", features = ["pem"], optional = true }
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.25", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread", "macros"] }
tempfile = "3.13"

[[bin]]
name = "schemadex-diff"
path = "src/bin/schemadex_diff.rs"

[[bin]]
name = "schemadex-api-audit"
path = "src/bin/schemadex_api_audit.rs"

[[bench]]
name = "cache_refresh"
path = "benches/cache_refresh.rs"
harness = false
required-features = ["sqlite"]
